# svc

./: .gitignore  Makefile.am  README.md  configure.ac  dump-inifile.c
src/libsvc/: argv.c  argv.h  childproc.c  childproc.h  common.h  inifile.c  inifile.h  ipc.c  ipc.h  nvlist-process.c  nvlist-process.h  signal.c  signal.h  uidgid.c  uidgid.h
src/supervise/: supervise.c
